--- a/AppDev/Base.lproj/Main.storyboard
+++ b/AppDev/Base.lproj/Main.storyboard
@@ -1,24 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Book</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AppDev" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Devslopes BG - June 2017-1920x1080" translatesAutoresizingMaskIntoConstraints="NO" id="ri9-mP-Tb4">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="150" id="ER3-dU-GPL"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopesProfileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="FMg-aE-Ohq">
+                                <rect key="frame" x="20" y="130" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="1EZ-Wh-59v"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="Zpq-nQ-Wuf"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FsF-Co-wzj">
+                                <rect key="frame" x="130" y="163" width="116" height="34.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="NpD-KQ-ot3">
+                                <rect key="frame" x="82.5" y="260" width="210" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bQ-KS-Txk">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="nrd-7w-UCo"/>
+                                            <constraint firstAttribute="height" constant="50" id="p2Y-51-xXA"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="cameraButton"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CK4-14-fS9">
+                                        <rect key="frame" x="80" y="0.0" width="50" height="50"/>
+                                        <state key="normal" title="Button" image="cameraButton"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3FK-RK-WYD">
+                                        <rect key="frame" x="160" y="0.0" width="50" height="50"/>
+                                        <state key="normal" title="Button" image="cameraButton"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="btp-xi-wnu">
+                                <rect key="frame" x="37.5" y="335" width="300" height="140"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Data Image" translatesAutoresizingMaskIntoConstraints="NO" id="RF4-0R-UfQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="RF4-0R-UfQ" secondAttribute="height" multiplier="1:1" id="1VP-JD-qVy"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="rBd-IL-N30"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Images Image" translatesAutoresizingMaskIntoConstraints="NO" id="31g-Ex-fMH">
+                                        <rect key="frame" x="160" y="0.0" width="140" height="140"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="VzX-pb-j6s"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="rmT-CH-SSP">
+                                <rect key="frame" x="37.5" y="500" width="300" height="140"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Videos Image" translatesAutoresizingMaskIntoConstraints="NO" id="ssW-Fm-ldb">
+                                        <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="ssW-Fm-ldb" secondAttribute="height" multiplier="1:1" id="XE5-vr-qvq"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="zvl-tD-XWx"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Code" translatesAutoresizingMaskIntoConstraints="NO" id="TbI-Sm-X1w">
+                                        <rect key="frame" x="160" y="0.0" width="140" height="140"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="140" id="l9l-3x-VRp"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="FMg-aE-Ohq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="4sZ-Te-kpf"/>
+                            <constraint firstItem="btp-xi-wnu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5QP-LC-qTu"/>
+                            <constraint firstItem="rmT-CH-SSP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AUy-Oq-LYX"/>
+                            <constraint firstItem="ri9-mP-Tb4" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Chw-2l-PYj"/>
+                            <constraint firstItem="NpD-KQ-ot3" firstAttribute="top" secondItem="FMg-aE-Ohq" secondAttribute="bottom" constant="30" id="EQi-hD-RFg"/>
+                            <constraint firstItem="FMg-aE-Ohq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="110" id="LrM-if-ySv"/>
+                            <constraint firstItem="ri9-mP-Tb4" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="PkP-dX-Hg2"/>
+                            <constraint firstItem="NpD-KQ-ot3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UJF-Ap-vgp"/>
+                            <constraint firstItem="FsF-Co-wzj" firstAttribute="leading" secondItem="FMg-aE-Ohq" secondAttribute="trailing" constant="10" id="W1Z-Hk-YDA"/>
+                            <constraint firstItem="btp-xi-wnu" firstAttribute="top" secondItem="NpD-KQ-ot3" secondAttribute="bottom" constant="25" id="evu-4Y-BAH"/>
+                            <constraint firstItem="ri9-mP-Tb4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lJl-h1-Acu"/>
+                            <constraint firstItem="FsF-Co-wzj" firstAttribute="centerY" secondItem="FMg-aE-Ohq" secondAttribute="centerY" id="p09-qy-UAV"/>
+                            <constraint firstItem="rmT-CH-SSP" firstAttribute="top" secondItem="btp-xi-wnu" secondAttribute="bottom" constant="25" id="wg2-Ks-usM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-79.200000000000003" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Code" width="500" height="250"/>
+        <image name="Data Image" width="500" height="250"/>
+        <image name="Devslopes BG - June 2017-1920x1080" width="1920" height="1080"/>
+        <image name="Images Image" width="500" height="250"/>
+        <image name="Videos Image" width="500" height="250"/>
+        <image name="cameraButton" width="57" height="57"/>
+        <image name="devslopesProfileLogo" width="191" height="191"/>
+    </resources>
 </document>
